--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,8 @@
 PORT=5000
 JWT_SECRET=yourSecretKey123
-DB_NAME=chargerDB
-DB_USER=root
-DB_PASSWORD=new_password
-DB_HOST=localhost
+DB_NAME=defaultdb
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_7toyS89f3OWD8zwAmzf
+DB_HOST=mysql-2cb4ebba-sarangdeshwal-ae60.j.aivencloud.com
+DB_PORT=14545
+SSL=true
